# CNT

./: .env.development  .env.production  .gitignore  LICENSE.md  README.md  bootstrap.sh  deploy.sh  dev-deploy.sh  local-deploy.sh  package-lock.json  package.json  tailwind.config.js
.parcel-cache/: 41321691575b5a4f  781ea73fb56252dd.txt  7acd6dfa074348e8  ae3c784ff75076d8  cf117fed7583bae5  d3180a667db87b50  e0621fead42e0196.txt  lock.mdb
contract/: Cargo.toml
contract/src/: lib.rs
contracts/: Cargo.toml  build.sh
contracts/ft/: Cargo.toml
contracts/ft/src/: lib.rs  utils.rs
contracts/main/: Cargo.toml
contracts/main/src/: ft.rs  lib.rs  utils.rs
public/: index.html  manifest.json
src/: app.jsx  index.html  index.js
src/api/contracts/: mainContract.js
src/assets/styles/: common.style.jsx  index.css
src/assets/template/css/: flex-slider.css  (+2 more)
src/components/: Button.jsx  Carousel.jsx  DatePicker.jsx  Dropdown.jsx  Footer.jsx  Form.jsx  Header.jsx  ImageUploader.jsx  Modal.jsx  Notification.jsx  ProgressBar.jsx  Skeleton.jsx  Tab.jsx  Timer.jsx
src/components/contest/: ContestImage.jsx  ContestItem.jsx  CreateContestModal.jsx  JoinContestModal.jsx  LikeButton.jsx  PredictContestModal.jsx  PredictImage.jsx  UpgradeModal.jsx  Voting.jsx
src/context/: account.js  near.js  notification.js
src/pages/: Home.jsx  Leaderboard.jsx  Privacy.jsx  Terms.jsx  index.js
src/pages/contest/: Contest.jsx  ContestList.jsx
src/pages/vote/: Vote.jsx
src/server/: api.js  server.js
src/utils/: config.js  near-social.js  near-wallets.js  nearApi.js  utils.js
(+1 files in other folders)
